--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
 }
 
 .miniatura {
-    background-color: red; /* Esto lo reemplazarías luego por una imagen */
+    background-color: red; 
     width: 100%;
     height: 180px;
     border-radius: 12px;
